--- a/data_accumu_actix/Cargo.toml
+++ b/data_accumu_actix/Cargo.toml
@@ -12,7 +12,7 @@ log = "0.4.17"
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.93"
 rand = "*"
-rustc-hash = "*"
+dotenvy = "*"
 sqlx = { version = "0.7.2", features = [
     "runtime-tokio-rustls",
     "sqlite",
