--- a/data_accumu_actix/Cargo.toml
+++ b/data_accumu_actix/Cargo.toml
@@ -19,6 +19,12 @@ sqlx = { version = "0.7.2", features = [
     "migrate",
 ] }
 
+reqwest = { version = "0.11", features = ["json"] }
 tokio = { version = "1.26.0", features = ["full"] }
 
 anyhow = "1.0.70"
+
+aws-config = "*"
+aws-sdk-s3 = "*"
+aws-sdk-rekognition = "0.34.0"
+tracing = "0.1.37"
