--- a/data_accumu_actix/Cargo.toml
+++ b/data_accumu_actix/Cargo.toml
@@ -23,6 +23,7 @@ reqwest = { version = "0.11", features = ["json"] }
 tokio = { version = "1.26.0", features = ["full"] }
 
 anyhow = "1.0.70"
+async-trait = "*"
 
 aws-config = "*"
 aws-sdk-s3 = "*"
