--- a/sb/Cargo.toml
+++ b/sb/Cargo.toml
@@ -8,3 +8,10 @@ edition = "2021"
 [dependencies]
 reqwest = { version = "0.11", features = ["json"] }
 tokio = { version = "1.26.0", features = ["full"] }
+anyhow = "1.0.70"
+serde = { version = "1.0.130", features = ["derive"] }
+
+aws-config = "*"
+aws-sdk-s3 = "*"
+aws-sdk-rekognition = "0.34.0"
+tracing = "0.1.37"
