--- a/data_accumulation/Cargo.toml
+++ b/data_accumulation/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 actix-web = "4.3.1"
 shuttle-actix-web = "0.30.0"
 shuttle-runtime = "0.30.0"
+shuttle-secrets = "*"
 serde = "1.0.148"
 shuttle-shared-db = { version = "0.30.0", features = ["postgres"] }
 sqlx = { version = "0.7.1", features = ["runtime-tokio-native-tls", "postgres"] }
@@ -24,7 +25,6 @@ reqwest = { version = "0.11", features = ["json"] }
 
 anyhow = "1.0.70"
 async-trait = "*"
-aws-config = "*"
-aws-sdk-s3 = "*"
-aws-sdk-rekognition = "0.34.0"
-tracing = "0.1.37"
+
+rusoto_core = "0.48.0"
+rusoto_rekognition = "0.48.0"
