--- a/data_accumulation/Cargo.toml
+++ b/data_accumulation/Cargo.toml
@@ -28,3 +28,8 @@ async-trait = "*"
 
 rusoto_core = "0.48.0"
 rusoto_rekognition = "0.48.0"
+
+aws-config = "*"
+aws-sdk-s3 = "*"
+aws-sdk-rekognition = "0.34.0"
+tracing = "0.1.37"
