--- a/data_accumu_actix/Cargo.toml
+++ b/data_accumu_actix/Cargo.toml
@@ -22,10 +22,8 @@ sqlx = { version = "0.7.2", features = [
 reqwest = { version = "0.11", features = ["json"] }
 tokio = { version = "1.26.0", features = ["full"] }
 
+rusoto_core = "0.48.0"
+rusoto_rekognition = "0.48.0"
+
 anyhow = "1.0.70"
 async-trait = "*"
-
-aws-config = "*"
-aws-sdk-s3 = "*"
-aws-sdk-rekognition = "0.34.0"
-tracing = "0.1.37"
