--- a/data_accumulation/Cargo.toml
+++ b/data_accumulation/Cargo.toml
@@ -26,10 +26,4 @@ reqwest = { version = "0.11", features = ["json"] }
 anyhow = "1.0.70"
 async-trait = "*"
 
-rusoto_core = "0.48.0"
-rusoto_rekognition = "0.48.0"
-
-aws-config = "*"
-aws-sdk-s3 = "*"
-aws-sdk-rekognition = "0.34.0"
-tracing = "0.1.37"
+google-apis-rs = "*"
